<resources xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="kpt_english_ime_name">Adaptxt</string>
	<string name="kpt_english_ime_settings">Adaptxt - Trial Settings</string>
	<string name="kpt_vibrate_on_keypress">Vibrate on keypress</string>
	<string name="kpt_sound_on_keypress">Sound on keypress</string>
	<string name="kpt_shared_user_label">KPT Adaptxt</string>
	<string name="kpt_added_word">
		<xliff:g id="word">%s</xliff:g>
		: Saved
	</string>
	<string name="kpt_atx_namespace">http://schemas.android.com/apk/res-auto</string>
    <string name="kpt_Help">Help</string>
    <string name="kpt_account_alert_msg">You are about to delete the account</string>
    <string name="kpt_cancel">Cancel</string>
    <string name="kpt_label_done_key">Done</string>
    <string name="kpt_label_symbol_key">123#</string>
    <string name="kpt_label_phone_key">123</string>
    <string name="kpt_label_alpha_key">ABC</string>
    <string name="kpt_label_alt_key_norm">1/2</string>
    <string name="kpt_label_alt_key_shift">2/2</string>
	<string name="kpt_learn_key">Personalize Suggestions</string>
	<string name="kpt_accounts_manger_title">Social Account Manager</string>
	<string name="kpt_accounts_manager_summary">Add or remove your social accounts</string>
	<string name="kpt_learn_from_title">Learn from...</string>
	<string name="kpt_learn_from_summary">Adaptxt will learn from your social network accounts, contacts and messages to provide personalized suggestions</string>
	<string name="kpt_auto_update_all">Auto Update All</string>
	<string name="kpt_account_type_sms">SMS</string>
	<string name="kpt_account_type_sms_summary">Adaptxt learns from your SMS</string>
	<string name="kpt_account_type_phone">Contacts</string>
	<string name="kpt_account_type_phone_summary">Adaptxt learns from your address book</string>
	<string name="kpt_update_now">Update now</string>
	<string name="kpt_auto_update_chkbox">Auto update</string>
	<string name="kpt_cycle">Auto update cycle</string>
	<string name="kpt_enable_auto_update_all">Enable Auto update all</string>
	<string name="kpt_disable_auto_update_all">Disable Auto update all</string>
	<string name="kpt_UI_STRING_HEADER_2_7002">Themes</string>
	<string name="kpt_option_full_theme">Dark</string>
	<string name="kpt_option_valentine">Bright</string>
	<string name="kpt_option_olympics">Blue</string>
	<string name="kpt_themes_layouts">Themes and Layouts</string>
	<string name="kpt_title_postman_dialog">Post to...</string>
	<string name="kpt_content_posted_success">Content successfully posted</string>
	<string name="kpt_content_posted_failed">Content post failed</string>
	<string name="kpt_option_postman_more">More...</string>
	<string name="kpt_learn_profile">Learning from your %s profile</string>
	<string name="kpt_no_network_connectivity">Connection error, please check your network connectivity and try again</string>
	<string name="kpt_social_acc_del">Your %s account has been deleted from Adaptxt only.</string>
    <string name="kpt_social_acc_add">Your %s account has been added successfully.</string>
   <string name="kpt_social_fetch_finish">Adaptxt has finished learning from %s</string>
   <string name="kpt_social_fetch_notify">Adaptxt is learning from %s</string>
 	<string name="kpt_loading_data">Loading...</string>
 	<string name="kpt_dictionary_msg">Deleting %d words</string>
    <string name="kpt_search_menu">Search</string>
    <string name="kpt_search_word">Search word</string>
    <string name="kpt_search_addon">Search add-ons</string>
    <string name="kpt_popular_domain_0">"http://"</string>
    <string name="kpt_popular_domain_1">"www."</string>
    <string name="kpt_popular_domain_2">".com"</string>
    <string name="kpt_popular_domain_3">".net"</string>
    <string name="kpt_popular_domain_4">".org"</string>
    <string name="kpt_popular_domain_5">e</string>
    <string name="kpt_popular_domain_sc_value">101</string>
    <string name="kpt_popular_domain_6">".edu"</string>
    <string name="kpt_popular_domain_lang_0">".us"</string>
    <string name="kpt_domain_output_text">"http://www."</string>
    <string name="kpt_language_selection_title">Input languages</string>
    <string name="kpt_display_accents">Ext. Character Bubble</string>
    <string name="kpt_autocorrect_misspelts">Auto Correction</string>
	<string name="kpt_autocorrect_misspelts_mode">Auto Correction Mode</string>
	<string name="kpt_autocorrect_dialog_header">Auto Correction Modes</string>
	<string name="kpt_feedback_category">Sound &amp; Vibrate</string>
	<string name="kpt_add_on_manager_title">Add-On Manager</string>
	<string name="kpt_add_on_manager_summary">Manage Adaptxt Add-Ons</string>
	<string name="kpt_mydictionary">My Dictionary</string>
	<string name="kpt_alert_dialog_ok">OK</string>
	<string name="kpt_android_market_app_unav">App store application not found</string>
	<string name="kpt_title_wait">Please wait...</string>
	<string name="kpt_notofication_addon_downloading">Downloading the latest Add-On list and loading previously installed Add-Ons. This might take a while depending on the number of Add-Ons</string>
	<string name="kpt_addon_atleast_one">At least one dictionary must be selected</string>
	<string name="kpt_package_install_success_toast">Add-On installation done</string>
	<string name="kpt_package_uninstall_success_message">Add-On uninstallation done</string>
	<string name="kpt_ime_language_selection_dialog_title">Select keyboard language</string>
	<string name="kpt_ime_language_selection_dialog_maint_mode">Refueling our engine, brb!</string>
	<string name="kpt_default_keyboard_txt">Current keyboard language</string>
	<string name="kpt_tap_disable">Tap to disable</string>
	<string name="kpt_tap_enable">Tap to enable</string>
	<string name="kpt_prior_tool_tip_1">Drag and drop the handle to change dictionary priority.</string>
	<string name="kpt_prior_tool_tip_2">Tap here to learn more about this feature.</string>
	<string name="kpt_prior_header_1">Add-On</string>
	<string name="kpt_prior_header_2">Priority</string>
	<string name="kpt_alert_dialog_cancel">Cancel</string>
	<string name="kpt_toast_language_selection">The default keyboard language can be changed using the space bar or by accessing the Prioritize Add-Ons tab after installation</string>
	<string name="kpt_dialog_message_sdcard_absent">SD card not found, backup failed</string>
	<string name="kpt_dialog_message_sdcard_no_space">There is no enough space in SD card to back up,, backup failed</string>
	<string name="kpt_dialog_title_warning">Warning</string>
	<string name="kpt_mydict_list_item_backup">Back up My Dictionary</string>
	<string name="kpt_mydict_list_item_import">Import from Android dictionary</string>
	<string name="kpt_mydict_delete_all">Are you sure you want to delete all words in My dictionary?</string>
	<string name="kpt_mydict_dialog_del_title">Delete all</string>
	<string name="kpt_mydict_dialog_message">Adaptxt is learning Android dictionary words</string>
	<string name="kpt_mydict_import_subtext">Android dictionary words will be learned</string>
	<string name="kpt_mydict_menu_item_add">Add</string>
	<string name="kpt_mydict_toast_no_userdict">No words in My Dictionary</string>
	<string name="kpt_incompatible_title">The add-on installed is not compatible</string>
	<string name="kpt_incompatible_message">Please tap here to update Adaptxt base</string>
	<string name="kpt_T100_UI_STRING_NOTIFICATIONBAR_MESSAGETEXT_1">Words successfully imported</string>
	<string name="kpt_enable_context">Please wait until dictionary is enabled/disabled and context is updated.</string>
	<string name="kpt_ticker_text">Adaptxt</string>
	<string name="kpt_tap_download">%s</string>
	<string name="kpt_toast_internet">Please check your Internet connection</string>
	<string name="kpt_notification_backup_done">Backup done</string>
	<string name="kpt_compact">(Compact)</string>
	<string name="kpt_sdcard_required">SD card required</string>
	<string name="kpt_backup_progress">Backup in progress…</string>
	<string name="kpt_pd_add_on_install_progress">Add-on installation in progress</string>
	<string name="kpt_pd_add_on_uninstall_progress">Add-on uninstallation in progress</string>
	<string name="kpt_pd_loading_progress">Loading data in progress...</string>
	<string name="kpt_pref_latestVersion">Check for the Latest Version</string>
	<string name="kpt_toast_latest_version">No new version available</string>
	<string name="kpt_toast_novoice">Speech Recognizer not available on this device</string>
	<string name="kpt_license_dialog_title">Attention</string>
	<string name="kpt_license_backup_done">Backup complete, continue installation?</string>
	<string name="kpt_license_backup">Do you want to back up your data?</string>
	<string name="kpt_license_new_version">A new version of Adaptxt is available; do you want to update now?</string>
	<string name="kpt_UI_STRING_SBAR_MESSAGE_3">License expired, tap to update</string>
	<string name="kpt_pref_kpt_summary">www.adaptxt.com</string>
	<string name="kpt_version_name">V1_0</string>
	<string name="kpt_toast_kb_change">Keyboard layout to be changed as per the add-on installed</string>
	<string name="kpt_incompatible_dialog_title">Update</string>
	<string name="kpt_incompatible_dialog_message">Please update Adaptxt as the following add-ons updated are incompatible: </string>
	<string name="kpt_base_incompatible_dialog_message">Please update all your add-ons as the current version of Adaptxt is incompatible with them </string>
	<string name="kpt_space">Space</string>
	<string name="kpt_phone_mode_change_to_symbols">12?</string>
	<string name="kpt_phone_mode_change_to_alphabet">ABC</string>
	<string name="kpt_phone_mode_change_to_sym_shift">!@#</string>
	<string name="kpt_atx">ATX</string>
	<string name="kpt_choose_kbd_theme">Keyboard Theme</string>
	<string name="kpt_choose_layout_potrait">Portrait Mode Layout</string>
	<string name="kpt_choose_layout_landscape">Landscape Mode Layout</string>
	<string name="kpt_potrait_default">Default layout for portrait mode</string>
    <string name="kpt_UI_STRING_QUICKSETTINGS_ITEMS_2_I_7003">Private Mode\nON</string>
    <string name="kpt_UI_STRING_QUICKSETTINGS_ITEMS_3_7003">Remove\nAccents</string>
    <string name="kpt_UI_STRING_QUICKSETTINGS_ITEMS_4_7003">Settings</string>
    <string name="kpt_UI_STRING_QUICKSETTINGS_ITEMS_6_7003">ATR Options</string>
    <string name="kpt_UI_STRING_MENUITEMS_1_7003">ATR</string>
    <string name="kpt_UI_STRING_MENUITEM_DESC_2_7003">Automatic Text Replacement</string>
    <string name="kpt_UI_STRING_MENUITEMS_2_7003">Shortcuts and Expansions</string>
    <string name="kpt_UI_STRING_ATR_COLUMNHEADER_1_7003">Shortcut</string>
    <string name="kpt_UI_STRING_ATR_COLUMNHEADER_2_7003">Expansion</string>
    <string name="kpt_UI_STRING_MENUITEM_DESC_3_7003">The shortcut must be from 2 to 4 characters (numbers and symbols are not allowed)</string>
	<string name="kpt_UI_STRING_ATR_BUTTON_1_7003">Generate ATR shortcut</string>
	<string name="kpt_atr_shortcut_inputtype_text">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="kpt_UI_STRING_SETTINGS_SITEM_1">Your new words</string>
    <string name="kpt_UI_STRING_SETTINGS_SITEM_3">Personal dictionary, ATR shortcuts, suggestions based on location, applications and social accounts</string>
    <string name="kpt_UI_STRING_SETTINGS_SITEM_5">Create your own shortcuts to type even faster</string>
    <string name="kpt_UI_STRING_AMGR_4_DISABLE">Disable</string>
    <string name="kpt_UI_STRING_AMGR_11">Uninstall</string>
	<string name="kpt_theme_title">Themes</string>
    <string name="kpt_UI_STRING_MENU_ITEM_10_300">Application-Based Suggestions</string>
    <string name="kpt_UI_STRING_MENU_ITEM_DESC_10_300">Provides suggestions based on the application being used</string>
	<string name="kpt_UI_STRING_KBCUSTOM_ITEM_14">Default</string>
</resources>