<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    >

    <TextView
        android:id="@+id/shortcut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kpt_UI_STRING_ATR_COLUMNHEADER_1_7003"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1" 
        >

        <EditText
            android:id="@+id/shortcutField"
			android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:digits="@string/kpt_atr_shortcut_inputtype_text"
            android:focusable="true"
            android:maxLength="3" 
            android:layout_weight="0.5"
            >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/generate_shortcut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/kpt_UI_STRING_ATR_BUTTON_1_7003" />
    </LinearLayout>

    <TextView
        android:id="@+id/shortcut_alert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kpt_UI_STRING_MENUITEM_DESC_3_7003" />

    <TextView
        android:id="@+id/substitution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kpt_UI_STRING_ATR_COLUMNHEADER_2_7003"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/substitutionField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true" />

    

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/kpt_label_done_key" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/kpt_cancel" />
    </LinearLayout>

</LinearLayout>
