<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:padding="6dip"
    android:id="@+id/rl"
    >
    <SeekBar
        android:id="@+id/popup_seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:max="2"
        android:paddingBottom="20sp"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:progress="2" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="70dip"
        android:layout_below="@+id/popup_seekBar"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/popup_cancel"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/kpt_alert_dialog_cancel" />

        <Button
            android:id="@+id/popup_default"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/kpt_UI_STRING_KBCUSTOM_ITEM_14" />

        <Button
            android:id="@+id/popup_Ok"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/kpt_alert_dialog_ok" />
    </LinearLayout>

    <TextView
        android:id="@+id/popup_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>