<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
     android:clickable="true"
      >
    

    <LinearLayout
        android:id="@+id/mylayout_tooltip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:background="@drawable/kpt_list_selector_background"
        android:clickable="true"
        android:clipToPadding="true"
        android:paddingBottom="5dip" >

        <RelativeLayout
            android:id="@+id/widget32"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dip" >

            <TextView
                android:id="@+id/widget33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/kpt_prior_tool_tip_1"
                android:textColor="#ffff9900"
                android:textSize="12sp" >
            </TextView>

            <TextView
                android:id="@+id/widget34"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/widget33"
                android:text="@string/kpt_prior_tool_tip_2"
                android:textColor="#ffff9900"
                android:textSize="12sp" >
            </TextView>

            <ImageView
                android:id="@+id/widget37"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_above="@+id/widget34"
                android:layout_toRightOf="@+id/widget33" >
            </ImageView>

            <TextView
                android:id="@+id/widget38"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/widget34"
                android:paddingLeft="75dip"
                android:paddingTop="10dip"
                android:text="@string/kpt_prior_header_1"
                android:textColor="#ffffff"
                android:textSize="17sp"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/widget39"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/widget34"
                android:paddingTop="10dip"
                android:text="@string/kpt_prior_header_2"
                android:textColor="#ffffff"
                android:textSize="17sp"
                android:textStyle="bold" >
            </TextView>
        </RelativeLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/ImageView01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="0dip"
        android:paddingTop="7dip"
        android:src="@drawable/kpt_divider_prior" >
    </ImageView>

    <com.kpt.adaptxt.beta.settings.KPTDragNDropListView
        android:id="@+id/drag_list"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="13"
        android:drawSelectorOnTop="false"
        android:fastScrollEnabled="true"
        android:headerDividersEnabled="true"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/widget38"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="vertical"
        android:paddingBottom="8dip" >
    </LinearLayout>

</LinearLayout>