<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="wrap_content" 
	android:background="@drawable/kpt_panel_background"
	android:layout_height="wrap_content" 
	android:weightSum="1"
	android:orientation="vertical"
	android:id="@+id/llParent">"

	<LinearLayout android:weightSum="1" 
		android:gravity="center"
		android:layout_width="match_parent" 
		android:layout_height="wrap_content"
		android:orientation="horizontal" >

	    <TextView android:id="@+id/quick_sett_prvtmode"
			  android:layout_weight="0.5" 
			  android:gravity="center"
			  android:layout_width="0dp" 
			  android:layout_height="wrap_content"
			  android:text="@string/kpt_UI_STRING_QUICKSETTINGS_ITEMS_2_I_7003" 
			  android:textSize="15sp"
			  android:textColor="@color/kpt_white_color_text"
			  android:drawableBottom="@drawable/kpt_privatemode_icon"
			  android:paddingBottom="10dp"
			  android:paddingTop="10dp"/>

		<View android:layout_gravity="bottom"
			  android:background="#3f3f3f" 
			  android:layout_width="2dp"
			  android:layout_height="match_parent"
			  android:layout_marginTop="4dp" />

		<TextView android:id="@+id/quick_sett_layouts" 
			  android:layout_width="0dp"
			  android:gravity="center" 
			  android:layout_height="wrap_content"
			  android:text="@string/kpt_theme_title" 
			  android:textSize="15sp"
			  android:textColor="@color/kpt_white_color_text"
			  android:layout_weight="0.5"
			  android:drawableBottom="@drawable/kpt_theme_icon" 
			  android:paddingBottom="10dp"
			  android:paddingTop="10dp"/>

	</LinearLayout>

	<TextView android:layout_gravity="center_horizontal"
		  android:layout_width="match_parent" 
		  android:layout_height="2dp"
		  android:background="#3f3f3f"
		  android:id="@+id/divider1"
		  android:layout_marginLeft="4dp"
		  android:layout_marginRight="4dp"/>"

	<LinearLayout android:layout_width="match_parent"
		      android:gravity="center"
		      android:weightSum="1"  
		      android:layout_height="wrap_content"
		      android:orientation="horizontal">
	
		
		
		<TextView android:id="@+id/quick_sett_settings"
			  android:layout_weight="0.5" 
			  android:layout_width="fill_parent"
			  android:gravity="center" 
			  android:layout_height="wrap_content"
			  android:text="@string/kpt_UI_STRING_QUICKSETTINGS_ITEMS_4_7003" 
			  android:textSize="15sp"
			  android:textColor="@color/kpt_white_color_text"
			  android:drawableBottom="@drawable/kpt_settings_icon"
			  android:paddingBottom="10dp"
			  android:paddingTop="10dp"/>
	  <!--   <TextView android:id="@+id/quick_sett_customize"
			  android:layout_width="0dp" 
			  android:layout_weight="0.5"
			  android:gravity="center" 
			  android:layout_height="wrap_content"
			  android:text="@string/kpt_UI_STRING_QUICKSETTINGSITEM_1_110" 
			  android:textSize="15sp"
			  android:textColor="@color/white_color_text"
			  android:drawableBottom="@drawable/keyboard_customization"
			  android:paddingBottom="10dp"
			  android:paddingTop="10dp"/>
	    
		<TextView
		      android:id="@+id/quick_sett_autocorrection"
		      android:layout_width="0dp"
		      android:layout_height="wrap_content"
		      android:layout_weight="0.5"
		      android:drawableBottom="@drawable/autocorrection_icon_on"
		      android:gravity="center"
		      android:paddingBottom="20dp"
		      android:paddingTop="10dp"
		      android:text="@string/kpt_UI_STRING_COMMON_5_ON"
		      android:textSize="15sp" />
			 
		<View android:layout_gravity="top" 
			  android:background="#3f3f3f"
			  android:layout_width="2dp" 
			  android:layout_height="match_parent"/>
		
		<TextView android:id="@+id/quick_sett_rmvaccents"
			  android:layout_width="0dp" 
			  android:layout_weight="0.5"
			  android:gravity="center" 
			  android:layout_height="wrap_content"
			  android:text="@string/kpt_UI_STRING_QUICKSETTINGS_ITEMS_3_7003" 
			  android:textSize="15sp"
			  android:textColor="@color/white_color_text"
			  android:drawableBottom="@drawable/remove_accents_icon"
			  android:paddingBottom="10dp"
			  android:paddingTop="10dp"/>  -->
		
	</LinearLayout>
	
	<TextView android:layout_gravity="center_horizontal"
		  android:layout_width="match_parent" 
		  android:layout_height="2dp"
		  android:background="#3f3f3f"
		  android:id="@+id/divider2"
		  android:layout_marginLeft="4dp"
		  android:layout_marginRight="4dp"/>
	    
	<LinearLayout android:layout_width="match_parent"
		      android:gravity="center"
		      android:weightSum="1"
		      android:layout_height="wrap_content"
		      android:orientation="horizontal">
		<TextView android:id="@+id/quick_sett_atr_dialog"
			  android:layout_weight="0.5" 
			  android:layout_width="0dp"
			  android:gravity="center" 
			  android:layout_height="wrap_content"
			  android:text="@string/kpt_UI_STRING_QUICKSETTINGS_ITEMS_6_7003" 
			  android:textSize="15sp"
			  android:textColor="@color/kpt_white_color_text"
			  android:drawableBottom="@drawable/kpt_atr_options_disable"
			  android:paddingBottom="10dp"
			  android:paddingTop="10dp"/>

		<View android:layout_gravity="top" 
			  android:background="#3f3f3f"
			  android:layout_width="2dp" 
			  android:layout_height="match_parent"
			  android:layout_marginBottom="4dp"/>
		
		
		<TextView android:id="@+id/quick_sett_rmvaccents"
			  android:layout_width="0dp" 
			  android:layout_weight="0.5"
			  android:gravity="center" 
			  android:layout_height="wrap_content"
			  android:text="@string/kpt_UI_STRING_QUICKSETTINGS_ITEMS_3_7003" 
			  android:textSize="15sp"
			  android:textColor="@color/kpt_white_color_text"
			  android:drawableBottom="@drawable/kpt_remove_accents_icon"
			  android:paddingBottom="10dp"
			  android:paddingTop="10dp"/> 
		
	</LinearLayout>

		
</LinearLayout>